# experio

./: .flake8  .gitignore  Manifest.toml  Project.toml  README.md  flake.nix  pyproject.toml  shell.nix
experio/: __main__.py  const.py  dataset.py  display.py  experio.jl  jl.py  models.py
experio/core/: __init__.py
experio/core/dataset/: __init__.py  dataset.py  download.py  experio.py  yawipa.py
experio/core/models/: __init__.py  embeddings.py
experio/core/yawipa/: __init__.py  parser.py  yawipa.py
notebooks/: notebook.jl
scripts/: embeddings.py  model.py  similarity.py
tex/: report.bib  report.tex
