[tool.poetry]
name = "experio"
version = "0.1.0"
description = ""
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
rich = "^10.12.0"
julia = "^0.5.6"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
experio = 'experio.__main__:main'

[[tool.poetry.packages]]
include = 'experio'

[tool.pyright]
include = ["experio/**/*"]
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
